B-surface builder added

--- a/Diploma/MainWindow.xaml
+++ b/Diploma/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Diploma"
         mc:Ignorable="d"
-        Title="MainWindow" 
+        Title="Depth3D model viewer" 
         Height="450" 
         Width="800">
 
@@ -48,10 +48,10 @@
                 <Separator />
                 <MenuItem Header="Exit"/>
             </MenuItem>
-            <MenuItem Header="Tools">
+            <!--<MenuItem Header="Tools">
                 <MenuItem Header="Sculpt" 
                           IsCheckable="True"/>
-            </MenuItem>
+            </MenuItem>-->
             <MenuItem Header="View">
                 <MenuItem Header="Wireframe" 
                           IsCheckable="True" 
